<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lightGrey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/app_heading"
            style="?attr/toolbarStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/calculator_by_fahomid"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:background="@drawable/ic_restore_white_36dp"
            android:onClick="loadHistory" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/resultString"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_gravity="top"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical|end"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/currentResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="false"
            android:gravity="center_vertical|end"
            android:paddingBottom="20dp"
            android:paddingTop="10dp"
            android:text="@string/default_result_text"
            android:textSize="40sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="3dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="3dp">

            <Button
                android:id="@+id/m_mc"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_memory_clear" />

            <Button
                android:id="@+id/m_mr"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_memory_recall" />

            <Button
                android:id="@+id/m_plus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_memory_plus_save" />

            <Button
                android:id="@+id/m_minus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_memory_minus_save" />

            <Button
                android:id="@+id/m_save"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_memory_save" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_percentage"
                style="@android:style/TextAppearance.Large"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@color/silver"
                android:text="@string/button_percentage" />

            <Button
                android:id="@+id/btn_root"
                style="@android:style/TextAppearance.Large"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@color/silver"
                android:text="@string/button_root" />

            <Button
                android:id="@+id/btn_square"
                style="@android:style/TextAppearance.Large"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@color/silver"
                android:text="@string/button_square" />

            <Button
                android:id="@+id/btn_fraction"
                style="@android:style/TextAppearance.Large"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@color/silver"
                android:text="@string/button_fraction" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_clear_entry"
                style="@android:style/TextAppearance.Large"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@color/silver"
                android:text="@string/button_clear_entry" />

            <Button
                android:id="@+id/btn_clear_all"
                style="@android:style/TextAppearance.Large"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@color/silver"
                android:text="@string/button_clear_all" />

            <Button
                android:id="@+id/btn_clear_last"
                style="@android:style/TextAppearance.Large"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@color/silver"
                android:text="@string/button_clear_last" />

            <Button
                android:id="@+id/btn_division"
                style="@android:style/TextAppearance.Large"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@color/silver"
                android:text="@string/button_division" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_seven"
                style="@android:style/TextAppearance.Large"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/button_seven" />

            <Button
                android:id="@+id/btn_eight"
                style="@android:style/TextAppearance.Large"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/button_eight" />

            <Button
                android:id="@+id/btn_nine"
                style="@android:style/TextAppearance.Large"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/button_nine" />

            <Button
                android:id="@+id/btn_multiplication"
                style="@android:style/TextAppearance.Large"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@color/silver"
                android:text="@string/button_multiplication" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_four"
                style="@android:style/TextAppearance.Large"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/button_four" />

            <Button
                android:id="@+id/btn_five"
                style="@android:style/TextAppearance.Large"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/button_five" />

            <Button
                android:id="@+id/btn_six"
                style="@android:style/TextAppearance.Large"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/six" />

            <Button
                android:id="@+id/btn_minus"
                style="@android:style/TextAppearance.Large"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@color/silver"
                android:text="@string/button_minus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_one"
                style="@android:style/TextAppearance.Large"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/button_one" />

            <Button
                android:id="@+id/btn_two"
                style="@android:style/TextAppearance.Large"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/button_two" />

            <Button
                android:id="@+id/btn_three"
                style="@android:style/TextAppearance.Large"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/button_three" />

            <Button
                android:id="@+id/btn_plus"
                style="@android:style/TextAppearance.Large"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@color/silver"
                android:text="@string/button_plus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightGrey"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_plus_minus"
                style="@android:style/TextAppearance.Large"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@color/silver"
                android:text="@string/button_plus_minus" />

            <Button
                android:id="@+id/btn_zero"
                style="@android:style/TextAppearance.Large"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/button_zero" />

            <Button
                android:id="@+id/btn_point"
                style="@android:style/TextAppearance.Large"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@color/silver"
                android:text="@string/button_point" />

            <Button
                android:id="@+id/btn_equal"
                style="@android:style/TextAppearance.Large"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@color/silver"
                android:text="@string/button_equal" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>