<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <Button
        android:text="@string/button_memory_clear"
        android:tag="@string/button_memory_clear"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
    <Button
        android:text="@string/button_memory_recall"
        android:tag="@string/button_memory_recall"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
    <Button
        android:text="@string/button_memory_plus_save"
        android:tag="@string/button_memory_plus_save"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
    <Button
        android:text="@string/button_memory_minus_save"
        android:tag="@string/button_memory_minus_save"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
    <Button
        android:text="@string/button_memory_clear"
        android:tag="@string/button_memory_clear"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
    <Button
        android:text="@string/button_memory_clear"
        android:tag="@string/button_memory_clear"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
</merge>